# Starveil

./: .gitignore  AGENTS.md  PROGRESS.md  Package.swift  README.md  environment.yml  pyproject.toml  run_cli.py  run_gui.py
MySequator.app/Contents/: Info.plist
MySequator.app/Contents/MacOS/: MySequator
Resources/: AppIcon.icns
Sources/CMySequatorSupport/: CMySequatorSupport.c
Sources/CMySequatorSupport/include/: CMySequatorSupport.h
Sources/MySequatorApp/: AppModel.swift  ContentView.swift  MySequatorSwiftApp.swift  PreviewSupport.swift  StarveilPanels.swift
Sources/MySequatorCore/: Alignment.swift  Calibration.swift  FloatRGBImage.swift  ImageIO.swift  ImageTransform.swift  Models.swift  Pipeline.swift  Postprocess.swift  SkyMask.swift
Sources/MySequatorCoreTestRunner/: main.swift
Sources/mysequator-swift/: main.swift
mysequator/: __init__.py
scripts/: install_starveil_app.sh  run_app.command
src/mysequator/: __init__.py  cli.py
src/mysequator/engine/: __init__.py  alignment.py  calibration.py  io.py  models.py  pipeline.py  postprocess.py
src/mysequator/ui/: __init__.py  app.py
tests/: test_alignment.py  test_pipeline.py
tests/MySequatorCoreTests/: AlignmentTests.swift  PipelineTests.swift  SkyGroundTests.swift
