[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mysequator"
version = "0.1.0"
description = "Independent macOS star-field stacking app"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10",
  "rawpy>=0.27",
  "tifffile>=2024",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mysequator = "mysequator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
  "tests/test_alignment.py",
  "tests/test_pipeline.py",
]
